<resources>
    <string name="app_name">个人主页</string>
    <string name="lable_projects">开源项目</string>
    <string name="lable_blogs">博客文章</string>
    <string name="lable_view_more">查看更多</string>
    <string name="lable_friend_link">友情链接：</string>
    <string name="lable_msg_board">留言板</string>
    <string name="lable_hot_msg">热门留言</string>
    <string name="lable_msg_join">人参与，</string>
    <string name="lable_msg_leave">人留言</string>
    <string name="hint_msg_input">来说两句吧……</string>
    <string name="lable_msg_publish">发表留言</string>

    <string name="navigation_drawer_open">打开左侧栏</string>
    <string name="navigation_drawer_close">关闭左侧栏</string>
    <string name="lable_user_name">方晓鹏</string>
    <string name="lable_user_email">850899969@qq.com</string>
    <string name="lable_user_info">个人信息</string>
    <string name="lable_web_version">Web版本</string>
</resources>
