<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_msg_board"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_5"
    android:background="@drawable/bg_round_corners_gray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/lable_msg_board"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5">

        <View
            android:layout_width="@dimen/dp_3"
            android:layout_height="@dimen/dp_18"
            android:layout_gravity="left|bottom"
            android:layout_marginBottom="@dimen/dp_2"
            android:background="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:gravity="left"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_1"
            android:text="@string/lable_hot_msg"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:gravity="right">

            <TextView
                android:id="@+id/txt_join_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/black"
                android:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/lable_msg_join"/>

            <TextView
                android:id="@+id/txt_msg_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_20"
                android:textColor="@color/black"
                android:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_12"
                android:text="@string/lable_msg_leave"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_15"
        android:background="@color/gray"/>

    <ExpandableListView
        android:id="@+id/exp_msg_board_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:layout_marginBottom="@dimen/dp_50"
        android:background="@color/transparent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_20"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_msg_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_80"
            android:layout_margin="@dimen/dp_5"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/sp_14"
            android:hint="@string/hint_msg_input"
            android:background="@drawable/bg_round_corners_gray"/>

        <TextView
            android:id="@+id/txt_msg_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="@dimen/sp_14"
            android:layout_margin="@dimen/dp_5"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:background="@drawable/bg_round_corners_gray"
            android:text="@string/lable_msg_publish"/>

    </LinearLayout>

</LinearLayout>